PROJECT(ItkVtk)

OPTION(BUILD_WRAPPERS "Wrap library" OFF)

FIND_PACKAGE(ITK REQUIRED)
FIND_PACKAGE(VTK REQUIRED)

INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS} ${ITK_INCLUDE_DIRS} ${ItkVtk_SOURCE_DIR}/src)
LINK_DIRECTORIES(${VTK_LIBRARY_DIRS} ${ITK_LIBRARY_DIRS})

SUBDIRS(src)

IF(BUILD_WRAPPERS)
   SUBDIRS(Wrapping)
ENDIF(BUILD_WRAPPERS)

# install devel files
FOREACH(f itkImageToVTKImageFilter.h itkImageToVTKImageFilter.txx itkVTKImageToImageFilter.h itkVTKImageToImageFilter.txx)
  INSTALL_FILES(/include/InsightToolkit/BasicFilters FILES ${ItkVtk_SOURCE_DIR}/src/${f})
ENDFOREACH(f)
