FIND_PACKAGE(WrapITK REQUIRED)

# Deal with numarray package  Options
SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
FIND_PACKAGE( NUMARRAY )

WRAP_ITK_INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )

BEGIN_WRAPPER_LIBRARY("BufferConversion")

SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)

SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()
