FIND_PACKAGE(WrapITK REQUIRED)

SET(WRAP_ITK_SWG_FILES ${ITK_SWG_FILES} "${ItkVtk_SOURCE_DIR}/Wrapping/itk.swg")

SET(WRAPPER_GCC_XML_INCLUDE_DIRS
  ${WRAPPER_GCC_XML_INCLUDE_DIRS}
  ${ItkVtk_SOURCE_DIR}/src
  ${VTK_INCLUDE_DIRS}
)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

BEGIN_WRAPPER_LIBRARY("ItkVtk")
SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

IF(ITK_CSWIG_PYTHON)
#   TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD)
ENDIF(ITK_CSWIG_PYTHON)

