FIND_PACKAGE(WrapITK REQUIRED)

# SET(WRAP_ITK_SWIG_LIBRARY_DIR ${WRAP_ITK_SWIG_LIBRARY_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/itk.swg")

SET(WRAPPER_GCC_XML_INCLUDE_DIRS
  ${WRAPPER_GCC_XML_INCLUDE_DIRS}
  ${ItkVtk_SOURCE_DIR}/src
  ${VTK_INCLUDE_DIRS}
)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

BEGIN_WRAPPER_LIBRARY("ItkVtk")
SET(WRAPPER_LIBRARY_AUTO_LOAD OFF) 
SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA ITKBasicFiltersB)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

IF(ITK_CSWIG_PYTHON)
  TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD)
ENDIF(ITK_CSWIG_PYTHON)

