FIND_PACKAGE(WrapITK REQUIRED)

BEGIN_WRAPPER_LIBRARY(${PROJECT_NAME})
SET(WRAPPER_SWIG_LIBRARY_FILES ${WRAPPER_SWIG_LIBRARY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itkvtk.swg")
SET(WRAPPER_LIBRARY_AUTO_LOAD OFF) 
SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA ITKBasicFiltersB)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

IF(WRAP_ITK_PYTHON)
  TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python
                        vtkImagingPythonD ITKCommon ITKBasicFilters)
  INSTALL_FILES("/Python" FILES "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
ENDIF(WRAP_ITK_PYTHON)

