FIND_PACKAGE(WrapITK REQUIRED)

BEGIN_WRAPPER_LIBRARY(${PROJECT_NAME})
SET(WRAPPER_SWIG_LIBRARY_FILES ${WRAPPER_SWIG_LIBRARY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itkvtk.swg")
SET(WRAPPER_LIBRARY_DEPENDS Base SimpleFilters)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

IF(WRAP_ITK_PYTHON)
  SET(VTK_VERSION "${VTK_MAJOR_VERSION}.${VTK_MINOR_VERSION}.${VTK_BUILD_VERSION}")
  SET(MIN_ITK_VER "5.0.0")
  IF("${VTK_VERSION}" STRLESS "${MIN_ITK_VER}")
    TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPython ITKCommon ITKBasicFilters)
  ELSE("${VTK_VERSION}" STRLESS "${MIN_ITK_VER}")
    TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD ITKCommon ITKBasicFilters)
  ENDIF("${VTK_VERSION}" STRLESS "${MIN_ITK_VER}")

  # will be removed in the future
  WRAP_ITK_INSTALL("/Python" "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
ENDIF(WRAP_ITK_PYTHON)

